fix overflow issues

--- a/styles/conf/2023/conf.css
+++ b/styles/conf/2023/conf.css
@@ -35,11 +35,18 @@
     opacity: 0.375;
   }
 
-  & .__fx-lights::before {
+  & .__fx-lights__inner {
+    position: relative;
+    width: 100%;
+    height: 150%;
+    overflow-x: hidden;
+  }
+
+  & .__fx-lights__inner::before {
     content: "";
     position: absolute;
     width: 150%;
-    height: 150%;
+    height: 100%;
     top: -25%;
     left: -25%;
     z-index: -1;
